--- a/layouts/partials/episode-module.html
+++ b/layouts/partials/episode-module.html
@@ -2,6 +2,21 @@
 {{ $.Scratch.Set "imagePathHighRes" (replace (.Scratch.Get "imagePath") ".png" "-high-res.png") }}
 {{ $.Scratch.Set "itunesTracking" (printf "episode%s" (string .Params.number)) }}
 {{ $.Scratch.Set "rpTracking" (printf "episode%s-modal" (string .Params.number)) }}
+{{ if in .Params.number "B" }}
+    {{ $.Scratch.Set "episodeNumber" (printf "Bonus Episode") }}
+    {{ $.Scratch.Set "tweetPrefix" "IRL Podcast Bonus Episode" }}
+{{ else if in .Params.number "T" }}
+    {{ $.Scratch.Set "episodeNumber" (printf "Season %s Trailer" (string .Params.season) ) }}
+    {{ $.Scratch.Set "tweetPrefix" "IRL Podcast" }}
+{{ else }}
+    {{ if and .Params.season .Params.seasonepisode }}
+        {{ $.Scratch.Set "episodeNumber" (printf "Season %s Ep. %s" (string .Params.season) (string .Params.seasonepisode)) }}
+    {{ else }}
+        {{ $.Scratch.Set "episodeNumber" (printf "Episode %s" .Params.number) }}
+    {{ end }}
+    {{ $.Scratch.Set "tweetPrefix" (printf "IRL Podcast %s" (.Scratch.Get "episodeNumber")) }}
+{{ end }}
+
 
 <article class="episode" id="episode-{{ .Params.number }}">
     <div class="episode-image episode-view-single">
@@ -15,15 +30,7 @@
 
     <a href="{{ .Permalink }}" class="episode-title-wrapper">
         <strong class="episode-number">
-        {{ if in .Params.number "B" }}
-            Bonus Episode {{ strings.TrimPrefix "B" .Params.number }}
-        {{ else }}
-            {{ if and .Params.season .Params.seasonepisode }}
-                Season {{ .Params.season }} Ep. {{ .Params.seasonepisode }}
-            {{ else }}
-                Episode {{ .Params.number }}
-            {{ end }}
-        {{ end }}
+            {{ (.Scratch.Get "episodeNumber") }}
         </strong>
 
         <h2 class="episode-title">{{ .Title }}</h2>
@@ -53,7 +60,9 @@
     <div class="episode-description">
         <p>
             {{ .Params.description | markdownify }}
-            <a href="{{ printf "%s#show-notes" .Permalink }}" class="episode-shownotes-link episode-view-list">Show Notes</a>
+            {{ if .Params.showNotes }}
+                <a href="{{ printf "%s#show-notes" .Permalink }}" class="episode-shownotes-link episode-view-list">Show Notes</a>
+            {{ end }}
         </p>
     </div>
 
@@ -71,18 +80,18 @@
     <div class="modal-content-wrapper">
         <div class="episode-share-links" id="episode-{{ .Params.number }}-share-links">
             <p class="modal-copy">
-                Episode {{ .Params.number }} - {{ .Title }}
+                {{ (.Scratch.Get "episodeNumber") }} - {{ .Title }}
             </p>
 
             <aside class="social-share-links" data-episode-title="{{ .Title | default "" }}">
                 <ul>
-                    <li><a class="twitter" data-service="twitter" href="https://www.twitter.com/intent/tweet?url={{ .Permalink }}&amp;text=IRL Podcast Episode {{ .Params.number }}: {{ printf "%s w/ @Mozilla & @Veronica" .Title }}" title="Twitter" data-link-type="social share" data-link-name="Twitter">Twitter</a></li>
+                    <li><a class="twitter" data-service="twitter" href="https://www.twitter.com/intent/tweet?url={{ .Permalink }}&amp;text={{ (.Scratch.Get "tweetPrefix") }}: {{ printf "%s w/ @Mozilla & @Veronica" .Title }}" title="Twitter" data-link-type="social share" data-link-name="Twitter">Twitter</a></li>
                     <li><a class="facebook" data-service="facebook" href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }}" title="Facebook" data-link-type="social share" data-link-name="Facebook">Facebook</a></li>
                     <li><a class="copylink" data-service="copylink" href="{{ .Permalink }}" data-link-type="social share" data-link-name="copylink" data-clipboard-target="#episode-url-input-{{ .Params.number }}">Copy Link</a></li>
                 </ul>
-            
+
                 <input readonly type="text" class="episode-url-input" id="episode-url-input-{{ .Params.number }}" value="{{ .Permalink }}">
-            
+
                 <div class="copy-ok">URL copied to clipboard</div>
             </aside>
         </div>
