[fix #92] Fix episode 0 title display bug.

--- a/layouts/partials/episode-module.html
+++ b/layouts/partials/episode-module.html
@@ -12,7 +12,7 @@
     {{ if and .Params.season .Params.seasonepisode }}
         {{ $.Scratch.Set "episodeNumber" (printf "Season %s Ep. %s" (string .Params.season) (string .Params.seasonepisode)) }}
     {{ else }}
-        {{ $.Scratch.Set "episodeNumber" (printf "Episode %s" .Params.number) }}
+        {{ $.Scratch.Set "episodeNumber" (printf "Episode %s" (string .Params.number)) }}
     {{ end }}
     {{ $.Scratch.Set "tweetPrefix" (printf "IRL Podcast %s" (.Scratch.Get "episodeNumber")) }}
 {{ end }}
