--- a/src/scss/irlpodcast.scss
+++ b/src/scss/irlpodcast.scss
@@ -759,6 +759,11 @@ a.episode-shownotes-link {
     }
 }
 
+// season pages
+#season-title {
+    margin-top: 100px;
+}
+
 // generic pages (about, ringtones)
 #page .page-content {
     margin-top: 60px;
