Show show notes on episode pages

--- a/layouts/episodes/single.html
+++ b/layouts/episodes/single.html
@@ -6,7 +6,7 @@
             {{/* The dot context below passes the entire episode object */}}
             {{ partial "episode-module.html" . }}
 
-            {{ if isset .Params "showNotes" }}
+            {{ if isset .Params "shownotes" }}
                 <h2 id="show-notes">Show Notes</h2>
                 <a name="#shownotes"></a>
 
