Add footer with CC license
Close /mozilla/irlpodcast#124
Fix Bug #1469401

- Made footer into header
- Added site footer
- Removed privacy and cookies links from about page
- Added privacy and cookies links to footer

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -55,10 +55,12 @@
 </head>
 
 <body id="{{ block "bodyID" . }}home{{ end }}">
+
     <main class="page-content" aria-label="Content">
     {{ block "main" . }}{{ end }}
     </main>
 
+    {{ partial "header.html" }}
     {{ partial "footer.html" }}
 
     <script src="/js/{{ index .Site.Data.js.hash "jquery.3.2.1.min.js" }}"></script>
