--- a/src/scss/includes/_mixins.scss
+++ b/src/scss/includes/_mixins.scss
@@ -219,3 +219,14 @@
        -moz-column-break-inside: avoid;
                    break-inside: avoid;
 }
+
+// gradient bar
+@mixin gradient-bar() {
+    @include gradient-horizontal(#ff00fd, 0%, #0e00cf, 100%);
+    content: '';
+    display: block;
+    height: 2px;
+    margin-top: 20px;
+    visibility: visible;
+    width: 100%;
+}
