--- a/src/scss/irlpodcast.scss
+++ b/src/scss/irlpodcast.scss
@@ -18,18 +18,8 @@
     'components/modal',
     'components/newsletter',
     'components/sections',
+    'components/header',
     'components/footer';
-
-
-@mixin gradient-bar() {
-    @include gradient-horizontal(#ff00fd, 0%, #0e00cf, 100%);
-    content: '';
-    display: block;
-    height: 2px;
-    margin-top: 20px;
-    visibility: visible;
-    width: 100%;
-}
 
 body {
     border-top: 0;
@@ -664,46 +654,6 @@ a.episode-shownotes-link {
 }
 
 
-#footer {
-    background: #111;
-    top: 0;
-    color: #fff;
-    height: 50px;
-    left: 0;
-    margin-bottom: 20px;
-    position: fixed;
-    width: 100%;
-
-    .content {
-        padding: 10px 20px;
-    }
-
-    a,
-    a:active,
-    a:focus,
-    a:hover,
-    a:link,
-    a:visited,
-    a:visited:focus,
-    a:visited:hover {
-        color: #fff;
-        text-decoration: none;
-    }
-
-    a:focus,
-    a:hover,
-    a:visited:focus,
-    a:visited:hover {
-        text-decoration: underline;
-    }
-
-    ul {
-        display: flex;
-        justify-content: space-around;
-        margin-bottom: 0;
-    }
-}
-
 // modal stuff
 #modal {
     h4 {
@@ -755,28 +705,6 @@ a.episode-shownotes-link {
 .svg-about-image img {
     display: block;
     margin: 10px auto 0;
-}
-
-#footer-links {
-    margin: 20px 0 10px;
-
-    ul {
-        display: flex;
-    }
-
-    li {
-        padding-right: 20px;
-
-        &:first-child:after {
-            @include font-size(24px);
-            content: '·';
-            display: inline-block;
-            line-height: 1px;
-            padding-left: 20px;
-            text-align: center;
-            width: 2px;
-        }
-    }
 }
 
 // episode page
