Add footer with CC license (#125)
* Add footer with CC license

Close /mozilla/irlpodcast#124
Fix Bug #1469401

- Made footer into header
- Added site footer
- Removed privacy and cookies links from about page
- Added privacy and cookies links to footer

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -55,6 +55,9 @@
 </head>
 
 <body id="{{ block "bodyID" . }}home{{ end }}">
+
+    {{ partial "header.html" }}
+
     <main class="page-content" aria-label="Content">
     {{ block "main" . }}{{ end }}
     </main>
