--- a/src/scss/includes/_mixins.scss
+++ b/src/scss/includes/_mixins.scss
@@ -219,3 +219,36 @@
        -moz-column-break-inside: avoid;
                    break-inside: avoid;
 }
+
+// gradient bar
+@mixin gradient-bar() {
+    @include gradient-horizontal(#ff00fd, 0%, #0e00cf, 100%);
+    content: '';
+    display: block;
+    height: 2px;
+    margin-top: 20px;
+    visibility: visible;
+    width: 100%;
+}
+
+// white links
+@mixin white-links () {
+    a,
+    a:active,
+    a:focus,
+    a:hover,
+    a:link,
+    a:visited,
+    a:visited:focus,
+    a:visited:hover {
+        color: #fff;
+        text-decoration: none;
+    }
+
+    a:focus,
+    a:hover,
+    a:visited:focus,
+    a:visited:hover {
+        text-decoration: underline;
+    }
+}
