--- a/src/scss/includes/_variables.scss
+++ b/src/scss/includes/_variables.scss
@@ -33,7 +33,7 @@ $color-brand-neongreen: #abff10;
 
 // Link colors
 $color-link-blue:       #00a7e0;
-$color-link:            $color-link-blue; // standard links (blue)
+$color-link:            #88429d;
 $color-link-yellow:     #ffbb38;
 
 // Button colors
