--- a/src/scss/irlpodcast.scss
+++ b/src/scss/irlpodcast.scss
@@ -18,6 +18,7 @@
     'components/modal',
     'components/newsletter',
     'components/sections',
+    'components/episode-summary',
     'components/header',
     'components/footer';
 
