Add “Mozilla Corporation” to site description
As requested by legal team

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -17,13 +17,13 @@
                     </p>
 
                     <p>
-                        IRL is an original podcast from Mozilla.
+                        IRL is an original podcast from Mozilla Corporation.
                     </p>
                 </div>
 
                 <section class="subscribe-links-wrapper">
                     <h4>Subscribe for free!</h4>
-                    
+
                     {{ partial "subscribe-links.html" (dict "subscribeLinksID" "subscribe-links-primary") }}
                 </section>
             </div>
