--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,7 +22,7 @@
                     </p>
 
                     <p>
-                        IRL is an original podcast from Mozilla.
+                        IRL is an original podcast from Mozilla Corporation.
                     </p>
                 </div>
 
