New host, who dis?

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -12,12 +12,12 @@
 
                 <div id="site-intro">
                     <p>
-                        Host Veronica Belmont shares real stories of life online and
-                        real talk about the future of the Web.
+                        Host Manoush Zomorodi shares real stories of life online
+                        and real talk about the future of the Web.
                     </p>
 
                     <p>
-                        IRL is an original podcast from Mozilla Corporation.
+                        IRL is an original podcast from Mozilla.
                     </p>
                 </div>
 
