--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,7 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
-            <li><a href="https://www.mozilla.org/internet-health/" rel="external">Internet Health</a></li>
+            <li><a href="https://www.mozilla.org/" rel="external">Mozilla</a></li>
         </ul>
     </div>
 </header>
