--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -30,7 +30,7 @@
     <meta property="og:image:width" content="{{ $.Scratch.Get "ogImageWidth" }}">
     <meta property="og:image:height" content="{{ $.Scratch.Get "ogImageHeight" }}">
     <meta property="og:title" content="{{ $.Scratch.Get "ogTitle" | default "IRL Podcast" }}">
-    <meta property="og:description" content="{{ .Page.Params.ogDescription | default "Veronica Belmont explores real stories of life online – and real talk about how we can all keep the Internet healthy, weird and wonderful. IRL is an original podcast from Mozilla Corporation." }}">
+    <meta property="og:description" content="{{ .Page.Params.ogDescription | default "Manoush Zomorodi explores real stories of life online – and real talk about how we can all keep the Internet healthy, weird and wonderful. IRL is an original podcast from the Mozilla Corporation." }}">
     <meta name="twitter:card" content="summary_large_image">
 
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/images/favicon/favicon-180x180.png">
